[tool.poetry]
name = "renault-zoe-digital-twin"
version = "0.1.0"
description = "Extracting data from Renault ZoE Electic Vehicle and streaming it to Cognite Data Fusion"
authors = ["Simon Stavland <simon.stavland@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
