[tool.poetry]
name = "renault-zoe-digital-twin"
version = "0.1.0"
description = "Extracting data from Renault ZoE Electic Vehicle and streaming it to Cognite Data Fusion"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/StavisT/renault-zoe-digital-twin"
repository = "https://github.com/StavisT/renault-zoe-digital-twin"
authors = ["Simon Stavland <simon.stavland@gmail.com>"]
keywords = ["digital twin", "CDF", "Cognite", "electric vehicle", "IoT"]

[tool.poetry.dependencies]
python = "^3.7"
cognite-sdk = "^1.5.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
coverage = "^5.0.3"
pytest-mock = "^2.0.0"
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-bandit = "^2.1.2"
flake8-black = "^0.1.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.8.7"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
